finished emotiv engine class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,17 @@
 CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
 
 
+SET( PROJ_PATH      ${CMAKE_SOURCE_DIR} )
+SET( PROJ_OUT_PATH  ${CMAKE_BINARY_DIR} )
+
+
 # Section for project specific settings
 
 SET(               PROJ_NAME          "hand" )
-SET(               PROJ_LIBRARIES     "Ws2_32" )
-SET(               PROJ_INCLUDES      "src" "lib" "lib/com" "lib/emotiv" )
-FILE( GLOB_RECURSE PROJ_HEADERS        src/*.h lib/*.h lib/emotiv/*.h lib/com/*.h )
-FILE( GLOB_RECURSE PROJ_SOURCES        main.cpp src/*.cpp lib/*.cpp lib/com/*.c lib/com/*.cpp )
+SET(               PROJ_LIBRARIES     "Ws2_32" "${PROJ_PATH}/lib/emotiv/edk.dll" )
+SET(               PROJ_INCLUDES      "src" "lib" "lib/com" )
+FILE( GLOB_RECURSE PROJ_HEADERS        src/*.h lib/*.h lib/com/*.h )
+FILE( GLOB_RECURSE PROJ_SOURCES        main.cpp src/*.cpp lib/*.cpp lib/com/*.c )
 
 # End of special section
 
@@ -20,10 +24,8 @@ ENDIF ( UNIX )
 
 
 
-SET( PROJ_PATH      ${CMAKE_SOURCE_DIR} )
-SET( PROJ_OUT_PATH  ${CMAKE_BINARY_DIR} )
-PROJECT( ${PROJ_NAME} )
 
+PROJECT( ${PROJ_NAME} )
 INCLUDE_DIRECTORIES( ${PROJ_INCLUDES} )
 ADD_EXECUTABLE( ${PROJ_NAME} ${PROJ_SOURCES} )
 TARGET_LINK_LIBRARIES( ${PROJ_NAME} ${PROJ_LIBRARIES} )
